# OGL3DG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Unit_test.cpp  build.rar  main.cpp
OGL3DG/: Player.cpp  Player.h  main.cpp
RELEASE/: OGL3DG_v0.1_x
RELEASE/res/: gameMap.mtl
RELEASE/runtime/fragment/: basic.frag
common/: Thumbs.db
doc/: Thumbs.db
engine/: CMakeLists.txt  main.cpp
engine/include/: Camera.h  Console.h  Engine.h  Errors.h  Game.h  InputHandler.h  Material.h  Mesh.h  Object.h  Renderer.h  Shader.h  Texture.h  Window.h  entityManager.h
engine/lib/: CMakeLists.txt
engine/lib/glad/include/glad/: glad.h
engine/lib/glm/doc/api/: modules.html
engine/lib/glm/doc/api/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_12.html  all_12.js  all_13.html  all_13.js  all_14.html  all_14.js  all_15.html  all_15.js  all_16.html  all_16.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_c.js  (+61 more)
engine/lib/glm/glm/: exponential.hpp
engine/lib/soil/: CMakeLists.txt  README.md
engine/lib/soil/inc/SOIL/: SOIL.h
engine/lib/soil/src/: SOIL.c
engine/runtime/cleared/: basic.frag
engine/runtime/fragment/: basic.frag
engine/runtime/light/: basic.frag  basic.vert
engine/runtime/standard/: basic.frag  basic.vert
engine/runtime/vertex/: basic.vert
engine/shaders/fragment/: basic.frag
engine/shaders/vertex/: basic.vert
engine/source/components/camera/: Camera.cpp  Camera.h
engine/source/components/initals/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
engine/source/components/light/: BaseLight.cpp  BaseLight.h  DirectLight.cpp  DirectLight.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
engine/source/components/loaders/: MtlLoader.cpp  MtlLoader.h  ObjLoader.cpp  ObjLoader.h
engine/source/components/object/: Object.cpp  Object.h
engine/source/components/states/: Material.cpp  Material.h  Mesh.h  Texture.cpp  Transform.cpp  Transform.h
engine/source/core/: Console.cpp  Console.h  Engine.cpp  Engine.h  Errors.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  Renderer.cpp  Renderer.h  Time.cpp  Time.h  Window.cpp  Window.h
engine/source/core/input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
engine/source/shaders/: Shader.cpp  Shader.h  standardShader.cpp  standardShader.h  standartShader.cpp  standartShader.h
engine/src/: Camera.cpp  Console.cpp  Engine.cpp  Game.cpp  InputHandler.cpp  Material.cpp  Mesh.cpp  Object.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Texture.h  Window.cpp  entityManager.cpp
include/: Camera.h  Console.h  Engine.h  Errors.h  Game.h  Globals.h  InputHandler.h  Mesh.h  Object.h  Settings.h  Shader.h  Window.h  foo.h
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/src/: glad.c
res/: Thumbs.db  ford_f150_final.mtl  gameMap.mtl
shaders/fragment/: basic.frag
shaders/vertex/: basic.vert
src/: Camera.cpp  Engine.cpp  Game.cpp  Globals.cpp  InputHandler.cpp  Mesh.cpp  Object.cpp  Settings.cpp  Shader.cpp  Window.cpp  foo.cpp  main.cpp
